[package]
name = "little-cdn"
version = "0.1.0"
edition = "2021"
authors = ["ponurakk"]
license = "MIT"
publish = false

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
migration = { path = "./migration" }

actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
actix-web-actors = "4.2.0"

sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "runtime-actix-native-tls", "macros"] }
chrono = { version = "0.4.26", features = ["serde"]}
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"

colored = "2.0.4"
log = "0.4.19"
env_logger = "0.10.0"
pwhash = "1.0.0"
rand = "0.8.5"
regex = "1.9.1"
clap = { version = "4.3.19", features = ["derive", "cargo"] }
thiserror = "1.0.44"
utoipa = { version = "3.4.3", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.4", features = ["actix-web"] }
tera = "1.19.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
rust-embed = { version = "6.8.1", features = ["include-exclude"] }
base64 = "0.21.2"
ws = "0.9.2"
futures-util = "0.3.28"
actix-multipart = "0.6.0"
file-format = "0.18.0"
actix-web-lab = "0.19.1"
