[package]
name = "cdn-server-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-web-lab = "0.18"
actix-multipart = "0.4.0"

uuid = { version = "1", features = ["v4"] }
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
sanitize-filename = "0.4"
env_logger = "0.9"
tera = "1.17.1"
chrono = "0.4.22"
