[package]
name = "little-cdn-api"
version = "0.1.0"
edition = "2021"
authors = ["ponurakk"]
license = "MIT"
publish = false

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-web-lab = "0.18"
actix-easy-multipart = "3.0.0"

uuid = { version = "1", features = ["v4"] }
env_logger = "0.9"
tera = "1.17.1"
chrono = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "0.9.10"

sled = "0.34.7"
rust-embed = { version = "6.4.2", features = ["debug-embed"] }