[package]
name = "little-cdn-api"
version = "0.1.0"
edition = "2021"
authors = ["ponurakk"]
license = "MIT"
publish = false

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-easy-multipart = "3.0.0"

env_logger = "0.9.3"
tera = "1.17.1"
chrono = "0.4.22"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"

sled = "0.34.7"
rust-embed = { version = "6.4.2", features = ["debug-embed"] }